Remove certificate name on Chrome 6+ and fix spacing

--- a/Profile Folder/chrome/partials/chrome/chrome-5/_urlbar-searchbar.scss
+++ b/Profile Folder/chrome/partials/chrome/chrome-5/_urlbar-searchbar.scss
@@ -177,7 +177,8 @@
 }
 
 #custom-identity-label {
-    margin: 0 !important;
+    margin-inline-start: 4px !important;
+    margin-inline-end: 6px !important;
     color: var(--protocol-color);
 }
 
